alignment fixed a little

--- a/style.css
+++ b/style.css
@@ -182,14 +182,15 @@ input[type=number]::-webkit-outer-spin-button {
         margin: 4px 0;
         display: flex;
         align-items: center;
-        gap: 3px;
         font-weight: bold;
+        line-height: 1.6;
     }
 
 .icon {
     font-weight: bold;
     margin-right: 6px;
     font-size: 1.2em;
+    width: 1.2em;
 }
 
     .icon.total {
